Fix screenshot alignment

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ html {
 
 img {
   width: 100%;
-  height: 268px;
   padding-bottom: .5em;
 }
 
@@ -22,7 +21,7 @@ h1 {
   font-family: "Denk One", sans-serif;
   margin-left: 0;
   padding-left: .35em;
-  padding-top: .05em;
+  padding-top: .07em;
   padding-bottom: .6em;
   line-height: 0;
 }
@@ -31,7 +30,7 @@ h2 {
   color: #623b0c;
   font-family: "Denk One", sans-serif;
   line-height: 0;
-  padding-top: .6em;
+  padding-top: .58em;
   padding-bottom: .9em;
 }
 
@@ -91,15 +90,15 @@ p::after {
   content: " ";
   display: block;
   border-bottom: 1px solid #ede3db;
-  margin-bottom: .4em;
+  margin-bottom: .48em;
 }
 
 a {
   background-color: #623b0c;
   color: #fff;
-  padding-left: .8em;
-  padding-top: .53rem;
-  padding-bottom: .53rem;
+  padding-left: .75em;
+  padding-top: .55rem;
+  padding-bottom: .55rem;
   text-decoration: none;
   border-radius: 8px;
 }
